--- a/style.css
+++ b/style.css
@@ -341,7 +341,7 @@ nav .fas{
         font-size: 25px;
     }
     nav ul{
-        background: black;
+        background: #33BCFF;
         position: fixed;
         top: 0;
         right: -200px;
